# esp_thermometer

./: Cargo.toml  README.md
common/: Cargo.toml
common/src/: lib.rs
firmware/: Cargo.toml
firmware/src/: lib.rs  rx.rs  telemetry.rs  tx.rs
host_collector/: Cargo.toml
host_collector/.cargo/: config.toml
host_collector/src/: command_tx.rs  lib.rs  main.rs  telemetry_rx.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
src/: commands.rs  lib.rs
station/: Cargo.toml
station/src/: lib.rs  main.rs  rx.rs  tx.rs
