[package]
edition      = "2024"
name         = "esp_thermometer"
rust-version = "1.88"
version      = "0.1.0"
default-run  = "esp_thermometer"

[lib]
name = "esp_thermometer"
path = "src/lib.rs"

[[bin]]
name = "esp_thermometer"
path = "src/bin/main.rs"

[dependencies]
common = { path = "../common" }
esp-hal = { version = "~1.0", features = ["esp32c6", "log-04", "unstable"] }
esp-rtos = { version = "0.2.0", features = [
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32c6",
  "log-04",
] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c6", "log-04"] }
log                    = "0.4.27"
embassy-net = { version = "0.7.1", features = ["dhcpv4", "log", "medium-ethernet", "tcp", "udp"] }
embedded-io = "0.7.1"
embedded-io-async = "0.7.0"
esp-alloc = "0.9.0"
esp-backtrace = { version = "0.18.1", features = ["esp32c6", "panic-handler", "println"] }
esp-println = { version = "0.16.1", features = ["esp32c6", "log-04"] }
embassy-executor = { version = "0.9.1", features = ["log"] }
embassy-time = { version = "0.5.0", features = ["log"] }
embassy-sync = { version = "0.6.2" }
esp-radio = { version = "0.17.0", features = ["esp-alloc", "esp32c6", "log-04", "smoltcp", "unstable", "wifi"] }
smoltcp = { version = "0.12.0", default-features = false, features = ["log", "medium-ethernet", "multicast", "proto-dhcpv4", "proto-dns", "proto-ipv4", "socket-dns", "socket-icmp", "socket-raw", "socket-tcp", "socket-udp"] }
critical-section = "1.2.0"
static_cell      = "2.1.1"
futures-util     = { version = "0.3.30", default-features = false }

serde = { version = "1.0", default-features = false, features = ["derive"] }
postcard = { version = "1.0", default-features = false }
protocol = { path = "../protocol" }
